Fix header z-index

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  z-index: 10;
+  z-index: 100;
   position: fixed;
   top: 0;
   height: 60px;
